compiler/tests/success/x86-64/eval_for.jazz
param int n = 12;


export
fn test_for() -> reg u64 {
reg u64[n] t;
reg u64 sum;

inline int i;

for i = 0 to n {
  t[i] = i;
}

?{}, sum = #set0();

for i = 0 to n {
  sum += t[i];
}

return sum;
}
