compiler/tests/fail/register_allocation/x86-64/force_regalloc_vs_arch.jazz
export fn main() -> reg u64 {
  reg u64 hi lo d;
  hi = 0;
  lo = 7;
  d = 2;
  #[force_regalloc=RCX] reg u64 q;
  reg u64 r;
  ?{RAX=q, RDX=r} = #DIV(hi, lo, d);
  q ^= r;
  return q;
}
